feat(Problem6): add a function to get list of emails with incorrect nicknames